Adding Firebase Storage Manager
Adding Firebase Storage Manager

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 ﻿FirebaseStorageNET/.vs
 FirebaseStorageNET/FirebaseStorageNET/obj
+FirebaseStorageNET/FirebaseStorageNET/bin
+FirebaseStorageNET/FirebaseStorageNET.ImageManager/obj
+FirebaseStorageNET/FirebaseStorageNET.DTOs/bin
+FirebaseStorageNET/FirebaseStorageNET.DTOs/obj
+FirebaseStorageNET/FirebaseStorageNET.ImageManager/bin
+FirebaseStorageNET/FirebaseStorageNET/bin
+FirebaseStorageNET/FirebaseStorageNET/bin
+FirebaseStorageNET/FirebaseStorageNET.ImageManager/StorageManager.cs
+FirebaseStorageNET/FirebaseStorageNET/bin
