--- a/FirebaseStorageNET/FirebaseStorageNET/FirebaseStorageNET.csproj
+++ b/FirebaseStorageNET/FirebaseStorageNET/FirebaseStorageNET.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FirebaseStorageNET.DTOs\FirebaseStorageNET.DTOs.csproj" />
+    <ProjectReference Include="..\FirebaseStorageNET.ImageManager\FirebaseStorageNET.ImageManager.csproj" />
+  </ItemGroup>
+
 </Project>
